--- a/src/app/containers/main/main.component.scss
+++ b/src/app/containers/main/main.component.scss
@@ -5,16 +5,16 @@
     background: url('../../../assets/images/main-image.png') center center no-repeat;
     background-size: cover;
     height: 500px;
-    @include iphone7(null, null, 350px) {}
-    @include iphone6(null, null, 330px) {}
-    @include iphone5(null, null, 260px) {}
+    @include iphone7(null, null, 300px) {}
+    @include iphone6(null, null, 280px) {}
+    @include iphone5(null, null, 220px) {}
   }
   &__title {
     font-size: 26px;
     text-align: center;
     font-weight: normal;
     font-family: 'DidotBold', sans-serif;
-    margin: 40px 0;
+    margin: 30px 0;
     @include iphone5(22px) {}
   }
 }
